[package]
name = "asciidoctor"
version = "0.1.0"
edition = "2021"
authors = ["oobot"]
license = "MIT OR Apache-2.0"
description = "Asciidoctor written in Rust"
repository = "https://github.com/oobot/asciidoctor-rs"

[dependencies]
anyhow = "1.0.69"
async-std = { version = "1.12.0", features = ["attributes"] }
once_cell = "1.17.0"
